--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,18 @@
 header{
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #ffffff;
-    border-color: #cccccc
+    border-color: #cccccc;
+    width: 960px;
+    margin:10px 
     }
 
 h1{
-    color: black;
-    border-color: #4aaaa5;
-    border: 10px
+    background-color: #4aaaa5;
+    padding: 25px;
+    color: white;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
 }
 
 h2{
@@ -21,6 +26,7 @@ footer{
     font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     clear: both;
     padding: 25px;
+    border-top: 8px solid #4aaaa5;
     }
 
 body{
@@ -29,6 +35,7 @@ body{
     border-color: #dddddd;
     color: #777777;
     width: 960px;
+    background-image: url(../images/memphis-mini-dark.png);
 }
 
 button {
@@ -42,8 +49,8 @@ button {
       }
 
 .Message{
-    box-sizing: border-box;
-    margin: 100px;
+    background-color: #ffffff;
+    margin: 10px;
     border: 10px;
     padding: 14px
 }
@@ -53,10 +60,10 @@ button {
 }
 
 img{
-    height: 350px;
+    height: 300px;
     width: 250px;
     float: left;
-    margin: 15px
+    margin: 20px
 }
 
 input{
@@ -64,5 +71,20 @@ input{
     padding: 5px
 }
 
+.AboutMe{
+    padding: 50px;
+    margin: 50px;
+    border: 10px;
+    background-color: #ffffff
+}
+
+.Whole{
+    max-width: 960px;
+}
 
 
+#bottom-center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
