--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ header{
     font-family: 'Georgia', Times, Times New Roman, serif;
     background-color: #ffffff;
     border-color: #cccccc;
-    width: 960px;
-    margin:10px 
+    margin:10px;
+    width: 100%;
     }
 
 h1{
@@ -13,6 +13,7 @@ h1{
     text-align: center;
     display: inline-block;
     font-size: 16px;
+    margin: 0px 0px 0px 23%
 }
 
 h2{
@@ -23,10 +24,11 @@ h2{
 footer{
     background-color: #666666;
     text-align:center;
-    font: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     clear: both;
     padding: 25px;
     border-top: 8px solid #4aaaa5;
+    width: 100%;
+    height: 50px
     }
 
 body{
@@ -34,8 +36,7 @@ body{
     background-color: #ffffff;
     border-color: #dddddd;
     color: #777777;
-    width: 960px;
-    background-image: url(../images/memphis-mini-dark.png);
+    background-image: url(../images/memphis-mini-dark.png)
 }
 
 button {
@@ -57,6 +58,7 @@ button {
 
 .Links{
     float: right;
+    margin: 0px 23% 0px 0px
 }
 
 img{
@@ -73,18 +75,21 @@ input{
 
 .AboutMe{
     padding: 50px;
-    margin: 50px;
+    margin: 50px 50px -100px 100px;
     border: 10px;
     background-color: #ffffff
 }
 
-.Whole{
-    max-width: 960px;
+.content{
+    width: 960px;
+    margin-left: 250px;
+    min-height: calc(100vh - 70px);
 }
 
+a:link {
+    color: red
+}
 
-#bottom-center{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+a:visited {
+     color: green;
+}
